--- a/docs/site/package.json
+++ b/docs/site/package.json
@@ -18,5 +18,8 @@
     "tailwindcss": "^4.1.18",
     "vitepress": "^1.6.4",
     "vue": "^3.5.26"
+  },
+  "overrides": {
+    "esbuild": ">=0.25.0"
   }
 }
