twineを参考に改良しました

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,25 +200,32 @@ jobs:
     steps:
     - name: Check job results
       run: |
-        echo "Should-Run: ${{ needs.should-run.outputs.run_ci }}"
-        echo "Lint: ${{ needs.lint.result }}"
-        echo "Type: ${{ needs.type.result }}"
-        echo "Test: ${{ needs.test.result }}"
+        echo ""
+        echo "📝 Job statuses:"
+        echo "📝 should-run → run_ci=${{ needs.should-run.outputs.run_ci }}"
+        echo "📝 lint → ${{ needs.lint.result == 'success' && '✓ success' || '✗ ' }}${{ needs.lint.result }} [required]"
+        echo "📝 type → ${{ needs.type.result == 'success' && '✓ success' || '✗ ' }}${{ needs.type.result }} [required]"
+        echo "📝 test → ${{ needs.test.result == 'success' && '✓ success' || '✗ ' }}${{ needs.test.result }} [required]"
+        echo ""
         
         # If CI was skipped, all jobs will be 'skipped' - that's OK
         if [ "${{ needs.should-run.outputs.run_ci }}" == "false" ]; then
-          echo "CI was skipped (no relevant changes) - Passed"
+          echo "# ✓ CI was skipped (no relevant changes) 🎉"
           exit 0
         fi
         
-        # If CI ran, check actual results
-        if [ "${{ needs.lint.result }}" != "success" ] || \
-           [ "${{ needs.type.result }}" != "success" ] || \
-           [ "${{ needs.test.result }}" != "success" ]; then
-          echo "Some checks failed"
+        # Check for failures
+        FAILED=false
+        if [ "${{ needs.lint.result }}" != "success" ]; then FAILED=true; fi
+        if [ "${{ needs.type.result }}" != "success" ]; then FAILED=true; fi
+        if [ "${{ needs.test.result }}" != "success" ]; then FAILED=true; fi
+        
+        if [ "$FAILED" = true ]; then
+          echo "❌ One or more CI checks failed."
           exit 1
+        else
+          echo "# ✓ All CI checks succeeded 🎉🎉🎉"
         fi
-        echo "All checks passed!"
 
     - name: Generate Summary
       if: always()
