--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+speed = [
+    "lru-dict>=1.3.0"
+]
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
