--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ dependencies = [
 speed = [
     "lru-dict>=1.3.0"
 ]
+encryption = [
+    "cryptography>=42.0.0"
+]
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
