--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -97,7 +97,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
+        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic cryptography
         uv pip install --system -e .
     
     - name: Run sync benchmarks (Windows)
@@ -155,7 +155,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic
+        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic cryptography
         uv pip install --system -e .
     
     - name: Run async benchmarks (Windows)
@@ -178,8 +178,66 @@ jobs:
         path: async-benchmark.json
         retention-days: 7
 
+  encryption-benchmark:
+    needs: should-run
+    if: needs.should-run.outputs.run_benchmark == 'true'
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.11", "3.13"]
+        exclude:
+          # Windows: only 3.13
+          - os: windows-latest
+            python-version: "3.11"
+
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+      with:
+        enable-cache: true
+    
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v6
+      with:
+        python-version: ${{ matrix.python-version }}
+    
+    - name: Setup Windows temp directory
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: New-Item -ItemType Directory -Force -Path D:\temp
+
+    - name: Install dependencies
+      run: |
+        uv pip install --system pytest pytest-benchmark pytest-asyncio apsw pydantic cryptography
+        uv pip install --system -e .
+    
+    - name: Run encryption benchmarks (Windows)
+      if: runner.os == 'Windows'
+      env:
+        TEMP: 'D:\temp'
+        TMP: 'D:\temp'
+      run: |
+        pytest tests/benchmark_encryption.py -v --benchmark-only --benchmark-json=encryption-benchmark.json || true
+
+    - name: Run encryption benchmarks (Linux/macOS)
+      if: runner.os != 'Windows'
+      run: |
+        pytest tests/benchmark_encryption.py -v --benchmark-only --benchmark-json=encryption-benchmark.json || true
+    
+    - name: Upload encryption benchmark results
+      uses: actions/upload-artifact@v4
+      with:
+        name: encryption-benchmark-results-${{ matrix.os }}-py${{ matrix.python-version }}
+        path: encryption-benchmark.json
+        retention-days: 7
+
   benchmark-summary:
-    needs: [should-run, benchmark, async-benchmark]
+    needs: [should-run, benchmark, async-benchmark, encryption-benchmark]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     if: always()
@@ -218,6 +276,13 @@ jobs:
       with:
         pattern: async-benchmark-results-*
         path: async-benchmark-results
+
+    - name: Download encryption benchmark results
+      if: needs.should-run.outputs.run_benchmark == 'true'
+      uses: actions/download-artifact@v4
+      with:
+        pattern: encryption-benchmark-results-*
+        path: encryption-benchmark-results
     
     - name: Set up Python
       if: needs.should-run.outputs.run_benchmark == 'true'
@@ -244,6 +309,12 @@ jobs:
         
         python3 scripts/parse_benchmark.py async-benchmark-results async >> $GITHUB_STEP_SUMMARY || echo "Failed to parse async benchmark results" >> $GITHUB_STEP_SUMMARY
 
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "### 🔐 Encryption Benchmarks" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        
+        python3 scripts/parse_benchmark.py encryption-benchmark-results encryption >> $GITHUB_STEP_SUMMARY || echo "Failed to parse encryption benchmark results" >> $GITHUB_STEP_SUMMARY
+
     # --- Performance Regression Detection (Only on main branch when benchmarks ran) ---
     - name: Merge all results for comparison
       if: github.ref == 'refs/heads/main' && needs.should-run.outputs.run_benchmark == 'true'
@@ -264,6 +335,13 @@ jobs:
 
         # Async results
         for p in Path('async-benchmark-results').rglob('async-benchmark.json'):
+            try:
+                data = json.load(open(p))
+                combined['benchmarks'].extend(data.get('benchmarks', []))
+            except: pass
+
+        # Encryption results
+        for p in Path('encryption-benchmark-results').rglob('encryption-benchmark.json'):
             try:
                 data = json.load(open(p))
                 combined['benchmarks'].extend(data.get('benchmarks', []))
