--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -341,6 +341,8 @@ jobs:
     needs: [check-version]
     if: needs.check-version.outputs.should_publish == 'true'
     runs-on: ubuntu-latest
+    outputs:
+      hashes: ${{ steps.hash.outputs.hashes }}
     
     steps:
     - uses: actions/checkout@v4
@@ -361,12 +363,35 @@ jobs:
     - name: Build package
       run: python -m build
     
+    - name: Generate hashes
+      id: hash
+      shell: bash
+      run: |
+        # Generate hashes for the artifacts in dist/
+        # Format: <hash> <filename>
+        # Then base64 encode the whole thing as a single line
+        cd dist && echo "hashes=$(sha256sum * | base64 -w0)" >> $GITHUB_OUTPUT
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
         name: dist
         path: dist/
         retention-days: 7
+
+  # ============================================
+  # SLSA Provenance - Main branch only, new version only
+  # ============================================
+  provenance:
+    needs: [build]
+    permissions:
+      actions: read # To read the workflow run.
+      id-token: write # To sign the provenance.
+      contents: write # To add assets to a release.
+    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v2.0.0
+    with:
+      base64-subjects: "${{ needs.build.outputs.hashes }}"
+      upload-assets: true # Optional: Upload to a new release
 
   # ============================================
   # Publish - Main branch only, new version only
@@ -395,7 +420,7 @@ jobs:
   # ============================================
   release:
     name: GitHub Release
-    needs: [check-version, build, publish]
+    needs: [check-version, build, publish, provenance]
     if: needs.check-version.outputs.should_publish == 'true'
     runs-on: ubuntu-latest
     permissions:
