--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -407,7 +407,7 @@ jobs:
     
     steps:
     - name: Download build artifacts
-      uses: actions/download-artifact@v7
+      uses: actions/download-artifact@v4
       with:
         name: dist
         path: dist/
@@ -430,10 +430,16 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Download build artifacts
-      uses: actions/download-artifact@v7
+      uses: actions/download-artifact@v4
       with:
         name: dist
         path: dist/
+
+    - name: Download provenance
+      uses: actions/download-artifact@v4
+      with:
+        name: provenance
+        path: provenance-dir/
     
     - name: Create source zip
       run: |
@@ -461,6 +467,7 @@ jobs:
         files: |
           dist/*
           nanasqlite-${{ needs.check-version.outputs.local_version }}-src.zip
+          provenance-dir/*.intoto.jsonl
         draft: false
         prerelease: ${{ needs.check-version.outputs.is_prerelease == 'true' }}
     
